<resources>
    <string name="initialization_fail">初始化失败,错误码</string>
    <string name="bind_finger">绑定手指</string>
    <string name="put_number">请输入手机号码</string>
    <string name="sure_message">确认个人信息</string>
    <string name="put_finger">请放置手指</string>
    <string name="bind_finish">绑定完成</string>
    <string name="membind_finger">会员绑定</string>
    <string name="move_finger">请移开手指...</string>
    <string name="again_finger">请再次放置手指...</string>
    <string name="same_finger">验证错误，请放置同一根手指</string>
    <string name="put_mapfinger">请按图示放置手指</string>
    <string name="waiting">请稍等...</string>
    <string name="bing_success">恭喜您绑定成功</string>
    <string name="back">返回</string>
    <string name="member">会员</string>
    <string name="employee">工作人员</string>
    <string name="coach">教练</string>
    <string name="man">男</string>
    <string name="girl">女</string>
    <string name="network_error">网络已断开,请检查网络</string>
    <string name="check_successful">验证成功</string>
    <string name="check_failed">验证失败,请重新验证</string>
    <string name="finger_right">请正确放置手指</string>
    <string name="initialization_successful">初始化成功</string>
    <string name="mTts_stating_error">初始化失败,错误码：</string>
    <string name="syn_data">数据同步成功</string>
    <string name="notice_stating">通知栏下载中</string>
    <string name="sign_member">会员签到</string>
    <string name="sign_successful">签到成功</string>
    <string name="app_name">智能一体机</string>
    <string name="deviceID">请输入设备ID：</string>
    <string name="deviceCode">请输入设备密码：</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>
    <string name="loading">请稍后&#8230;</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="app_id">5b3d9df5</string>
    <string name="error_invalid_mobile_phone">手机号码格式有误，请确认</string>
    <string name="error_password">密码输入错误</string>
    <string name="error_internal_server">服务器异常</string>
    <string name="error_network_diable">网络异常（http）</string>
    <string name="error_response_parse">解析服务器返回数据错误</string>
    <string name="error_unkown">未捕获的异常</string>
    <string name="error_socket_diable">网络已断开</string>
    <string name="digitKeyppad_ok">确定</string>
    <string name="digitKeyppad_delect">退格</string>
    <string name="digitKeyppad_zero">0</string>
    <string name="digitKeyppad_nine">9</string>
    <string name="digitKeyppad_eight">8</string>
    <string name="digitKeyppad_seven">7</string>
    <string name="digitKeyppad_six">6</string>
    <string name="digitKeyppad_five">5</string>
    <string name="digitKeyppad_four">4</string>
    <string name="digitKeyppad_three">3</string>
    <string name="digitKeyppad_two">2</string>
    <string name="digitKeyppad_one">1</string>
    <string name="face_back">返回</string>
    <string name="face_bind">绑定人脸</string>
    <string name="number_card">会员卡号</string>
    <string name="introduce_faces">请将人脸置于相机预览框内</string>
    <string name="face_sign">刷脸签到</string>
    <string name="choose_sign_way">请选择您的签到方式</string>
    <string name="veune_choose_sign">指静脉签到</string>
    <string name="sign_choose_scan">扫码签到</string>
    <string name="welcome_use">欢迎使用</string>
    <string name="please_check_net">网络已断开，请检查网络</string>
    <string name="sure_to_exit">确定退出软件么？</string>
    <string name="no_camera">您的设备无摄像头</string>
    <string name="error_phone">手机号不正确</string>
    <string name="none_face">人脸特征无法检测，请换一张图片</string>
    <string name="face_success">人脸识别成功</string>
    <string name="famele">女</string>
    <string name="lesson_up">上课</string>
    <string name="confirm_lesson_count">确定课时</string>
    <string name="lesson_down">下课</string>
    <string name="lesson_up_success">上课成功</string>
    <string name="lesson_down_success">下课成功</string>
    <string name="put_finger_first">放置手指</string>
    <string name="choose_lessons">选择课程</string>
    <string name="choose_card_info">选择卡号</string>
    <string name="none_faces">无人脸数据</string>
    <string name="none_identify">未识别</string>
    <string name="confirm_info">确认个人信息</string>
    <string name="luru_face">录用人脸</string>
    <string name="success">成功</string>
    <string name="reco_face">识别人脸</string>
    <string name="coach_finger">请教练放置手指</string>
    <string name="student_finger">请学员放置手指</string>
    <string name="wait_moment">请稍后&#8230;</string>
    <string name="check_success">验证成功&#8230;</string>
    <string name="coach_first">请教练先放手指</string>
    <string name="sign_error">验证失败,请重新验证&#8230;</string>
    <string name="confirm_lesson">请先确定消课数量</string>
    <string name="add_veunu_finger">添加指静脉手指</string>
    <string name="add_face_reco">添加人脸识别</string>
    <string name="sign">签到</string>
    <string name="value_date">有效期:</string>
    <string name="lesson_type">类型:</string>
    <string name="card_name">卡名:</string>
    <string name="rest_time">剩余次数:</string>
    <string name="card_num">卡号:</string>
    <string name="lesson_name">课程:</string>
    <string name="lesson_time">上课时间:</string>

</resources>
