<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
     android:id="@+id/bind_step_phone"
    style="@style/edit_linearLayout"
    android:layout_width="500dp"
    android:layout_height="wrap_content"
    android:visibility="visible"
    android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="输入11位手机号码"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:visibility="gone"
            />
        <RelativeLayout
            android:id="@+id/error_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <TextView
                android:id="@+id/error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="输入号码错误"
                android:textColor="@color/red"
                android:textSize="20dp"
                android:visibility="invisible" />
        </RelativeLayout>
    <com.link.cloud.base.ClearEditText
        android:id="@+id/phone_regist_one"
        android:layout_width="match_parent"
    android:layout_height="80px"
    android:background="@drawable/textview_style"
    android:drawablePadding="10dp"
    android:hint=""
    android:maxLength="11"
    android:maxLines="1"
    android:gravity="center"
    android:padding="10dp"
    android:textColor="@color/white"
    android:text=""
    android:textSize="40sp"
    android:layout_marginTop="40px"
    android:layout_marginBottom="40px"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bind_step_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150px"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="请输入手机号码:"
                android:textSize="28dp"
                android:visibility="invisible" />

            <com.link.cloud.base.ClearEditText
                android:id="@+id/phonecode_regist_one"
                android:layout_width="450px"
                android:layout_height="100px"
                android:layout_marginTop="14px"
                android:background="@drawable/textview_style"
                android:digits="1234567890"
                android:maxLength="11"
                android:padding="10dp"
                android:text="18666666666"
                android:textCursorDrawable="@null"
                android:textSize="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:text="已发送验证码!"
                android:textSize="28dp" />

            <RelativeLayout
                android:layout_width="400px"
                android:layout_height="match_parent"
                android:layout_marginLeft="30px">

                <com.link.cloud.base.ClearEditText
                    android:id="@+id/regist_code"
                    android:layout_width="450px"
                    android:layout_height="100px"
                    android:layout_marginTop="14px"
                    android:background="@drawable/textview_style"
                    android:digits="1234567890"
                    android:hint="输入验证码"
                    android:maxLength="11"
                    android:padding="10dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="35dp" />

                <Button
                    android:id="@+id/regist_code_bt"
                    android:layout_width="180px"
                    android:layout_height="80px"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/regist_code"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/code_btn_bg"
                    android:text="已发送 30s"
                    android:textColor="@color/black"
                    android:textSize="25dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
    android:layout_width="520dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:visibility="visible"
    android:orientation="vertical">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <Button
    android:id="@+id/bind_keypad_1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:layout_weight="1"
    android:background="@drawable/button_bt_bg"
    android:gravity="center"
    android:textColor="@color/colorbutton"
    android:text="@string/digitKeyppad_one"
    android:textSize="@dimen/text_size_40sp"/>
    <Button
    android:id="@+id/bind_keypad_2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:background="@drawable/button_bt_bg"
    android:layout_weight="1"
    android:textColor="@color/colorbutton"
    android:gravity="center"
    android:text="@string/digitKeyppad_two"
    android:textSize="@dimen/text_size_40sp" >
    </Button>
    <Button
    android:id="@+id/bind_keypad_3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:textColor="@color/colorbutton"
    android:background="@drawable/button_bt_bg"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/digitKeyppad_three"
    android:textSize="@dimen/text_size_40sp">
    </Button>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="38dp"
    android:orientation="horizontal" >

        <Button
        android:id="@+id/bind_keypad_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textColor="@color/colorbutton"
        android:background="@drawable/button_bt_bg"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/digitKeyppad_four"
        android:textSize="@dimen/text_size_40sp" >
        </Button>

        <Button
    android:id="@+id/bind_keypad_5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:textColor="@color/colorbutton"
    android:background="@drawable/button_bt_bg"
    android:gravity="center"
    android:layout_weight="1"
    android:text="@string/digitKeyppad_five"
    android:textSize="@dimen/text_size_40sp" >
    </Button>
    <Button
    android:id="@+id/bind_keypad_6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:background="@drawable/button_bt_bg"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/digitKeyppad_six"
    android:textColor="@color/colorbutton"
    android:textSize="@dimen/text_size_40sp"></Button>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="38dp"
    android:orientation="horizontal" >
    <Button
    android:id="@+id/bind_keypad_7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:background="@drawable/button_bt_bg"
    android:textColor="@color/colorbutton"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/digitKeyppad_seven"
    android:textSize="@dimen/text_size_40sp" >
    </Button>
    <Button
    android:id="@+id/bind_keypad_8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:textColor="@color/colorbutton"
    android:background="@drawable/button_bt_bg"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/digitKeyppad_eight"
    android:textSize="@dimen/text_size_40sp" >
    </Button>
    <Button
    android:id="@+id/bind_keypad_9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:textColor="@color/colorbutton"
    android:background="@drawable/button_bt_bg"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/digitKeyppad_nine"
    android:textSize="@dimen/text_size_40sp" >
    </Button>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="38dp"
    android:orientation="horizontal" >
        <Button
        android:id="@+id/bind_keypad_delect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textColor="@color/colorbutton"
        android:background="@drawable/button_bt_bg"
        android:layout_weight="1"
        android:text="@string/digitKeyppad_delect"
        android:gravity="center"
        android:textSize="@dimen/text_size_40sp" >
        </Button>

        <Button
    android:id="@+id/bind_keypad_0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:textColor="@color/colorbutton"
    android:background="@drawable/button_bt_bg"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/digitKeyppad_zero"
    android:textSize="@dimen/text_size_40sp" >
    </Button>
    <Button
    android:id="@+id/bind_keypad_ok"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:layout_weight="1"
    android:background="@drawable/button_bt_bg"
    android:textColor="@color/white"
    android:gravity="center"
    android:text="@string/digitKeyppad_ok"
    android:textSize="@dimen/text_size_40sp" >
    </Button>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>