<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/index_main_bg"
    android:orientation="vertical">
    <include layout="@layout/layout_head_page" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/choose_sign_way"
            android:textColor="#fff"
            android:gravity="center"
            android:textSize="42sp" />

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:layout_marginTop="150dp"
        android:id="@+id/sing_choose_veune"
            android:background="@drawable/sing_choose_veune"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/main_icon_finger"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veune_choose_sign"
                android:textColor="#ffffff"
                android:textSize="28dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:layout_marginTop="100dp"
android:id="@+id/sign_choose_face"
            android:background="@drawable/botton_face_round"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_face"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/face_sign"
                android:textColor="#ffffff"
                android:textSize="28dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>